--- a/website/templates/admin/brand.html
+++ b/website/templates/admin/brand.html
@@ -22,9 +22,9 @@
                 Add
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="{{url_for('addproduct')}}">Add Product</a>
-                <a class="dropdown-item" href="{{url_for('addbrand')}}">Add Brand</a>
-                <a class="dropdown-item" href="{{url_for('addcat')}}">Add Category</a>
+                <a class="dropdown-item" href="{{url_for('addproduct')}}">Add product</a>
+                <a class="dropdown-item" href="{{url_for('addbrand')}}">Add brand</a>
+                <a class="dropdown-item" href="{{url_for('addcat')}}">Add category</a>
               </div>
             </li>
           </ul>
