--- a/website/templates/admin/index.html
+++ b/website/templates/admin/index.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{{url_for('admin')}}">Management</a>
+        <a class="navbar-brand" href="{{url_for('admin')}}">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,10 +22,16 @@
                 Add
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="{{url_for('addproduct')}}">Add Product</a>
-                <a class="dropdown-item" href="{{url_for('addbrand')}}">Add Brand</a>
-                <a class="dropdown-item" href="{{url_for('addcat')}}">Add Category</a>
+                <a class="dropdown-item" href="{{url_for('addproduct')}}">Add product</a>
+                <a class="dropdown-item" href="{{url_for('addbrand')}}">Add brand</a>
+                <a class="dropdown-item" href="{{url_for('addcat')}}">Add category</a>
               </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('manage_accounts')}}">Manage Accounts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{url_for('admin_logout')}}">Log out</a>
             </li>
           </ul>
         </div>
