--- a/website/templates/customer/order.html
+++ b/website/templates/customer/order.html
@@ -5,7 +5,7 @@
     {% include '_messages.html' %}
     <div class="row">
         <div class="col-md-12">
-            Inoice: {{orders.invoice}}
+            Invoice: {{orders.invoice}}
             <br>
             Status: {{orders.status}}
             <br>
