--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -31,8 +31,15 @@
                 </div>
               </li>
              {% if current_user.is_authenticated %}
-             <li class="nav-item">
-              <a href="{{url_for('customer_logout')}}" class="nav-link">{{current_user.name}}</a>
+             <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{current_user.name}}
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown" >
+                <a href="{{url_for('customer_profile')}}" class="nav-link">Profile</a>
+                <a href="{{url_for('customer_show_orders')}}" class="nav-link">Your Orders</a>
+                <a href="{{url_for('customer_service')}}" class="nav-link">Customer service</a>
+              </div>
             </li>
              <li class="nav-item">
                <a href="{{url_for('customer_logout')}}" class="nav-link"> Logout</a>
@@ -42,7 +49,11 @@
               <a href="{{url_for('customer_register')}}" class="nav-link">Sign up</a>
             </li>
              <li class="nav-item">
-              <a href="{{url_for('customerLogin')}}" class="nav-link">login</a>
+              <a href="{{url_for('customerLogin')}}" class="nav-link">Login</a>
+            </li>
+            </li>
+            <li class="nav-item">
+            <a href="{{url_for('login')}}" class="nav-link">Admin login</a>
             </li>
             {% endif %}
               <li class="nav-item">
